# rovio_fork

./: .gitignore  CMakeLists.txt  README.md
include/rovio/: Camera.hpp  FilterStates.hpp  ImgUpdate.hpp  ImuPrediction.hpp  MultiCamera.hpp  PoseUpdate.hpp  RovioFilter.hpp  RovioNode.hpp  Scene.hpp  State.hpp  VelocityUpdate.hpp  ZeroVelocityUpdate.hpp  bag_utils.hpp  configuration.hpp
include/rovio/CoordinateTransform/: FeatureOutput.hpp  FeatureOutputReadable.hpp  LandmarkOutput.hpp  PixelOutput.hpp  RovioOutput.hpp  YprOutput.hpp
lightweight_filtering/: CMakeLists.txt
lightweight_filtering/include/lightweight_filtering/: FilterState.hpp  ModelBase.hpp  OutlierDetection.hpp  PropertyHandler.hpp  State.hpp  TestClasses.hpp  Update.hpp  common.hpp
lightweight_filtering/scripts/: render_jinja2.py
lightweight_filtering/src/: testPrediction.cpp  testState.cpp  testUpdate.cpp
lightweight_filtering/templates/: _macros_library.j2  test_states.hpp.j2
src/: Camera.cpp  FeatureCoordinates.cpp  rovio_node.cpp  rovio_rosbag_loader.cpp  rovio_states.hpp.j2
